After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759174 - segfault in gedit_status_menu_button_set_label
segfault in gedit_status_menu_button_set_label
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: file loading and saving
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-08 12:53 UTC by Sebastien Bacher
Modified: 2015-12-10 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2015-12-08 12:53:54 UTC
The bug was reported against gedit 3.18.2 in the Ubuntu error tracker, there is no user description going with it though

"#0  0xb76b813c in gedit_status_menu_button_set_label (button=0x0, label=0x94bcc98 "sh") at gedit/gedit-status-menu-button.c:153
No locals.
  • #1 language_changed
    at gedit/gedit-window.c line 1253
  • #2 g_cclosure_marshal_VOID__PARAM
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gmarshal.c line 1832
  • #3 g_closure_invoke
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gclosure.c line 804
  • #4 signal_emit_unlocked_R
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gsignal.c line 3629
  • #5 g_signal_emit_valist
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gsignal.c line 3385
  • #6 g_signal_emit
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gsignal.c line 3441
  • #7 g_object_dispatch_properties_changed
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gobject.c line 1062
  • #8 g_object_notify_by_spec_internal
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gobject.c line 1155
  • #9 g_object_notify
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gobject.c line 1203
  • #10 gtk_source_buffer_set_language
    at gtksourcebuffer.c line 1611
  • #11 set_language
    at gedit/gedit-document.c line 615
  • #12 gedit_document_loaded_real
    at gedit/gedit-document.c line 1281
  • #13 g_cclosure_marshal_VOID__VOIDv
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gmarshal.c line 905
  • #14 g_type_class_meta_marshalv
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gclosure.c line 1024
  • #15 _g_closure_invoke_va
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gclosure.c line 867
  • #16 g_signal_emit_valist
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gsignal.c line 3294
  • #17 g_signal_emit_by_name
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gobject/gsignal.c line 3481
  • #18 successful_load
    at gedit/gedit-tab.c line 1824
  • #19 load_cb
    at gedit/gedit-tab.c line 1913
  • #20 g_task_return_now
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/gtask.c line 1107
  • #21 g_task_return
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/gtask.c line 1165
  • #22 g_task_return_new_error
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/gtask.c line 1745
  • #23 close_input_stream_cb
    at gtksourcefileloader.c line 482
  • #24 async_ready_close_callback_wrapper
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/ginputstream.c line 543
  • #25 g_task_return_now
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/gtask.c line 1107
  • #26 complete_in_idle_cb
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/gtask.c line 1121
  • #27 g_idle_dispatch
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./glib/gmain.c line 5441
  • #28 g_main_dispatch
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./glib/gmain.c line 3154
  • #29 g_main_context_dispatch
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./glib/gmain.c line 3769
  • #30 g_main_context_iterate
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./glib/gmain.c line 3840
  • #31 g_main_context_iteration
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./glib/gmain.c line 3901
  • #32 g_application_run
    at /build/glib2.0-4hziuO/glib2.0-2.47.3/./gio/gapplication.c line 2331
  • #33 main
    at gedit/gedit.c line 146

Comment 1 Sébastien Wilmet 2015-12-10 13:37:21 UTC
Should be fixed:
https://git.gnome.org/browse/gedit/commit/?id=284df9beccb729887031f1ce5b1fcf45e7efe0c5

And backported to the gnome-3-18 branch.

The crash could probably happen when closing a tab or closing gedit when a file has finished to load.